[workspace]
members = [
    "crates/common",
    "crates/core-service",
    "crates/dao",
    "crates/sdk",
    "crates/sdk-macro",
    "crates/wasm",
    "crates/wasm-gen",
    "crates/worker-server",
    "land-cli",
    "land-controller",
    "land-server",
    "land-worker",
    "tests/rust-helloworld"
]
default-members = ["land-cli"]
resolver = "2"

[workspace.package]
version = "0.3.11"
edition = "2021"
authors = ["fuxiaohei <fudong0797@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = "0.7.5"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"] }
http = "1.1.0"
land-common = { path = "./crates/common" }
land-dao = { path = "./crates/dao" }
land-core-service = { path = "./crates/core-service" }
land-sdk = { path = "crates/sdk" }
land-sdk-macro = { path = "crates/sdk-macro" }
land-wasm = { path = "./crates/wasm" }
land-wasm-gen = { path = "./crates/wasm-gen" }
land-worker-server = { path = "./crates/worker-server" }
lazy_static = "1.4.0"
metrics = "0.22.3"
md5 = "0.7.0"
once_cell = "1.19.0"
opendal = { version = "0.46.0", default-features = false, features = [
    "services-fs",
    "services-s3",
    "services-memory",
] }
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false, features = [
    "stream",
    "rustls-tls",
    "json",
] }
rust-embed = { version = "8.4.0", features = [
    "include-exclude",
    "compression",
] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.33"
time = { version = "0.3.36", features = ["local-offset"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = [
    "timeout",
    "cors",
    "fs",
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "time",
    "local-time",
    "env-filter",
] }
uuid = { version = "1.8.0", features = ["v4"] }
walkdir = "2.5.0"
wit-bindgen = "0.25.0"
wit-bindgen-core = "0.25.0"
wit-bindgen-rust = "0.25.0"
wit-component = "0.208.1"
