[workspace.package]
version = "0.5.0-alpha.2"
edition = "2021"
authors = ["fuxiaohei <fudong0797@gmail.com>"]

[workspace]
members = ["land-cli", "land-server", "land-worker", "lib/common", "lib/dao"]
default-members = ["land-cli"]
resolver = "2"

[workspace.dependencies]
# internal dependencies
land-common = { path = "lib/common" }
land-dao = { path = "lib/dao" }
# third-party dependencies
anyhow = "1.0.86"
axum = "0.7.5"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive", "env"] }
once_cell = "1.19.0"
rust-embed = { version = "8.5.0", features = [
    "include-exclude",
    "compression",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
time = { version = "0.3.36", features = ["local-offset"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = [
    "timeout",
    "cors",
    "fs",
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "time",
    "local-time",
    "env-filter",
] }
walkdir = "2.5.0"
