[workspace.package]
version = "0.5.0-alpha.5"
edition = "2021"
authors = ["fuxiaohei <fudong0797@gmail.com>"]

[workspace]
members = [
    "land-cli",
    "land-server",
    "land-worker",
    "lib/common",
    "lib/core",
    "lib/dao",
    "lib/vars",
]
default-members = ["land-cli"]
resolver = "2"

[workspace.dependencies]
# internal dependencies
land-common = { path = "lib/common" }
land-core = { path = "lib/core" }
land-dao = { path = "lib/dao" }
land-vars = { path = "lib/vars" }
# third-party dependencies
anyhow = "1.0.86"
async-trait = "0.1.81"
axum = "0.7.5"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive", "env"] }
md5 = "0.7.0"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", default-features = false, features = [
    "stream",
    "rustls-tls",
    "json",
] }
rust-embed = { version = "8.5.0", features = [
    "include-exclude",
    "compression",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
strum = { version = "0.26.3", features = ["derive"] }
time = { version = "0.3.36", features = ["local-offset"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = [
    "timeout",
    "cors",
    "fs",
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "time",
    "local-time",
    "env-filter",
] }
uuid = { version = "1.10.0", features = ["v4"] }
walkdir = "2.5.0"
