[package]
name = "land-apiserver"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
land-common = { workspace = true }
land-dao = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
land-core-service = { workspace = true }
serde = { workspace = true }
