[package]
name = "land-backend"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
land-common = { workspace = true }
land-dao = { workspace = true }
land-service = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
