[package]
name = "land-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
color-print = "0.3.6"
inquire = "0.7.5"
land-common = { workspace = true }
regex = "1.10.4"
rust-embed = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
land-core-service = { workspace = true }

