[package]
name = "land-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-template = { version = "2.3.0", features = ["handlebars"] }
clap = { workspace = true }
handlebars = "5.1.2"
land-common = { workspace = true }
land-dao = { workspace = true }
rust-embed = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
