[package]
name = "land-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.3", features = ["cookie"] }
axum-htmx = "0.6.0"
axum-template = { version = "2.3.0", features = ["handlebars"] }
chrono = { workspace = true }
clap = { workspace = true }
handlebars = "5.1.2"
land-common = { workspace = true }
land-core = { workspace = true }
land-dao = { workspace = true }
land-vars = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
