[package]
name = "land-worker"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
land-common = { workspace = true }
land-core = { workspace = true }
land-wasm-server = { workspace = true }
tokio = { workspace = true }
url = "2.5.2"
