[package]
name = "moni-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
hyper = { workspace = true }
md-5 = "0.10.5"
moni-core = { path = "../moni-core" }
moni-runtime = { path = "../moni-runtime" }
once_cell = { workspace = true }
rust-embed = "6.6.0"
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
walkdir = "2.3.2"
zip = "0.6.4"
