[package]
name = "moni-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
jwt-simple = "0.11.4"
lazy_static = { workspace = true }
once_cell = { workspace = true }
prost = "0.11.8"
serde = { workspace = true }
sled = "0.34.7"
sqlx = { version = "0.6.2", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "time"
] }
time = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
vergen = "7.5.1"

[lib]
doctest = false
