[package]
name = "moni-lib"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
sea-orm = { version = "0.11.3", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls"
] }
serde = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
vergen = { version = "8.1.1", features = ["build", "cargo"] }
