[package]
name = "moni-lib"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bcrypt = "0.14.0"
chrono = { workspace = true }
envconfig = "0.10.0"
futures = "0.3.28"
lazy_static = { workspace = true }
once_cell = { workspace = true }
opendal = { version = "0.36.0", default-features = false, features = [
    "services-fs"
] }
rand = { workspace = true }
sea-orm = { version = "0.11.3", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls"
] }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
vergen = { version = "8.1.3", features = ["build", "cargo"] }

[lib]
doctest = false
