[package]
name = "moni-runtime"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
futures-util = "0.3.28"
hyper =  { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasi-common = { workspace = true }
wasmtime = { workspace = true }
which = "4.4.0"
wit-bindgen-core = { workspace = true }
wit-bindgen-rust = { workspace = true }
wit-component = { workspace = true }
moni-lib = { path = "../moni-lib" }

[dev-dependencies]
tokio = { workspace = true }

[lib]
doctest = false
