[package]
name = "moni-runtime"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
futures-util = "0.3.28"
hyper = { workspace = true }
lazy_static = { workspace = true }
moka = { version = "0.11.0", default-features = false, features = ["sync"] }
moni-lib = { path = "../moni-lib" }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
# wasi-common = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
which = "4.4.0"
wit-bindgen-core = { workspace = true }
wit-bindgen-rust = { workspace = true }
wit-component = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lib]
doctest = false
