[package]
name = "moni-sdk"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
moni-sdk-macro = { path = "./macro" }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[lib]
doctest = false
