[package]
name = "moni-sdk"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
lazy_static = { workspace = true }
matchit = "0.7.0"
moni-sdk-macro = { path = "./macro" }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen" }

[lib]
doctest = false
