[package]
name = "moni-sdk"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
http = { workspace = true }
lazy_static = { workspace = true }
matchit = "0.7.0"
moni-sdk-macro = { path = "./macro" }
wit-bindgen = { workspace = true }
