[package]
name = "land-center"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
envconfig = { workspace = true }
futures-util = { workspace = true }
headers = "0.3.8"
hyper = { workspace = true }
land-core = { workspace = true }
land-dao = { workspace = true }
land-storage = { workspace = true }
lazy_static = { workspace = true }
lettre = { version = "0.10.4", default-features = false, features = [
    "rustls-tls",
    "smtp-transport",
    "pool",
    "hostname",
    "builder",
] }
md-5 = "0.10.5"
once_cell = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.4.3", features = ["cors", "trace"] }
tracing = { workspace = true }
validator = { version = "0.16.1", features = ["derive"] }
