[package]
name = "land-edge"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
envconfig = { workspace = true }
futures-util = { workspace = true }
land-core = { workspace = true }
lazy_static = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.20.0", features = [
    "rustls-tls-native-roots",
] }
tracing = { workspace = true }
