[package]
name = "land-runner"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
color-print = { workspace = true }
land-common = { workspace = true }
land-worker-server = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2.5.0"
