[package]
name = "land-runner"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
color-print = { workspace = true }
land-api-server = { workspace = true }
land-common = { workspace = true }
land-worker-server = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
axum = { workspace = true }
toml = { workspace = true }
