[package]
name = "land-runtime"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
deadpool = { workspace = true }
envconfig = { workspace = true }
gethostname = "0.4.3"
land-core = { workspace = true }
land-storage = { workspace = true }
land-worker = { workspace = true }
lazy_static = { workspace = true }
moka = { version = "0.11.3", default-features = false, features = ["sync"] }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sysinfo = "0.29.7"
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
hyper = { workspace = true }
