[package]
name = "land-runtime"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
async_zip = { version = "0.0.15", features = ["full"] }
axum = { workspace = true }
base64 = "0.21.4"
chrono = { workspace = true }
clap = { workspace = true }
envconfig = { workspace = true }
futures-util = { workspace = true }
gethostname = "0.4.3"
land-core = { workspace = true }
land-worker = { workspace = true }
lazy_static = { workspace = true }
moka = { workspace = true }
once_cell = { workspace = true }
opendal = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
hyper = { workspace = true }
