[package]
name = "land-api-server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
land-common = { workspace = true }
land-dblayer = { workspace = true }
md5 = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
