[package]
name = "land-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
documenation = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }


[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
futures-util = "0.3.28"
land-core = { path = "../core" }
land-restful = { path = "../restful" }
land-runtime = { path = "../runtime" }
reqwest = { workspace = true }
rust-embed = "6.7.0"
tokio = { workspace = true }
tracing = { workspace = true }
which = "4.4.0"
