[package]
name = "land-common"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
clap = { workspace = true }
hostname = "0.4.0"
lazy_static = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
vergen = { version = "8.3.1", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
] }
