[package]
name = "land-common"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
clap = { workspace = true }
hex = "0.4.3"
hostname = "0.4.0"
lazy_static = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
simple_crypt = "0.2.3"
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
vergen = { version = "8.3.1", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
] }
