[package]
name = "land-core-service"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.3", features = ["cookie","form"] }
axum-template = { version = "2.3.0", features = ["handlebars"] }
handlebars = "5.1.2"
jsonwebtoken = "9.3.0"
land-common = { workspace = true }
land-dao = { workspace = true }
minify-html = "0.15.0"
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio =  { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
