[package]
name = "land-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
envconfig = { workspace = true }
lazy_static = { workspace = true }
md-5 = { workspace = true }
once_cell = { workspace = true }
opendal = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = "0.8.6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
vergen = { version = "8.2.5", features = ["build", "cargo", "git", "gitcl"] }

[lib]
doctest = false
