[package]
name = "land-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
hostname = "0.3.1"
land-dao = { workspace = true }
land-wit = { workspace = true }
md5 = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempdir = "0.3.7"
tokio = { workspace = true }
tracing = { workspace = true }
serde_yaml = "0.9.32"
uuid = { workspace = true }
